--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "fastapi[standard]>=0.115.8",
     "opencv-python>=4.11.0.86",
     "passlib[bcrypt]>=1.7.4",
-    "psycopg2>=2.9.10",
+    "psycopg2-binary>=2.9.10",
     "pydantic[email]>=2.10.6",
     "python-dotenv>=1.0.1",
     "python-jose>=3.3.0",
