--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,25 +1,39 @@
-events {
-    worker_connections 1024;
-}
+server {
+    listen 80;
+    server_name your_domain_or_ip;
 
-http {
-    upstream fastapi_backend {
-        server fastapi:8080;
+    location / {
+        proxy_pass http://fastapi_app:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    server {
-        listen 80;
-
-        location / {
-            proxy_pass http://fastapi_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 60s;
-            proxy_read_timeout 120s;
-            proxy_send_timeout 120s;
-            client_max_body_size 100M;
-        }
+    location /offer {
+        proxy_pass http://fastapi_app:8080/offer;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    location /set_stream {
+        proxy_pass http://fastapi_app:8080/set_stream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # WebRTC ICE/STUN support
+    location /ws {
+        proxy_pass http://fastapi_app:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+    }
+
+    client_max_body_size 100M;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
 }
