--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name your_domain_or_ip;
+    server_name 46.8.31.7;
 
     location / {
         proxy_pass http://fastapi_app:8080;
@@ -30,6 +30,13 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
+    }
+
+    location /stun {
+        proxy_pass http://stun.myserver.com:3478;
+    }
+    location /turn {
+        proxy_pass http://turn.myserver.com:3478;
     }
 
     client_max_body_size 100M;
