--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,11 @@ services:
     restart: always
     depends_on:
       - db
+      - nginx
     environment:
       - DATABASE_URL=postgresql://dandevko:dandevko@db/senior_project
-    ports:
-      - "8080:8080"
+    expose:
+      - "8080"
     volumes:
       - .:/app
 
@@ -27,5 +28,24 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  nginx:
+    image: nginx:latest
+    container_name: nginx_proxy
+    restart: always
+    depends_on:
+      - fastapi
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./static:/usr/share/nginx/html/static
+    networks:
+      - backend
+
 volumes:
   postgres_data:
+
+networks:
+  backend:
+    driver: bridge
