--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,46 +1,65 @@
-server {
-    listen 80;
-    server_name 46.8.31.7;
+# Main Nginx Configuration
+worker_processes auto;
+pid /var/run/nginx.pid;
 
-    location / {
-        proxy_pass http://fastapi_app:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+events {
+    worker_connections 1024;
+}
 
-    location /offer {
-        proxy_pass http://fastapi_app:8080/offer;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    sendfile on;
+    keepalive_timeout 65;
 
-    location /set_stream {
-        proxy_pass http://fastapi_app:8080/set_stream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
-    # WebRTC ICE/STUN support
-    location /ws {
-        proxy_pass http://fastapi_app:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-    }
+    server {
+        listen 80;
+        server_name 46.8.31.7;
 
-    location /stun {
-        proxy_pass http://stun.myserver.com:3478;
-    }
-    location /turn {
-        proxy_pass http://turn.myserver.com:3478;
-    }
+        location / {
+            proxy_pass http://fastapi_app:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-    client_max_body_size 100M;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
+        location /offer {
+            proxy_pass http://fastapi_app:8080/offer;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /set_stream {
+            proxy_pass http://fastapi_app:8080/set_stream;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        # WebRTC ICE/STUN support
+        location /ws {
+            proxy_pass http://fastapi_app:8080;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+        }
+
+        location /stun {
+            proxy_pass http://stun.myserver.com:3478;
+        }
+        location /turn {
+            proxy_pass http://turn.myserver.com:3478;
+        }
+
+        client_max_body_size 100M;
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+    }
 }
