--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,27 +1,19 @@
-# Main Nginx Configuration
-worker_processes auto;
-pid /var/run/nginx.pid;
-
-events {
-    worker_connections 1024;
-}
-
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
     sendfile on;
     keepalive_timeout 65;
 
-    # Logging
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    upstream fastapi_backend {
+        server fastapi_app:8080;
+    }
 
     server {
         listen 80;
         server_name 46.8.31.7;
 
         location / {
-            proxy_pass http://fastapi_app:8080;
+            proxy_pass http://fastapi_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -29,22 +21,16 @@ http {
         }
 
         location /offer {
-            proxy_pass http://fastapi_app:8080/offer;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass http://fastapi_backend/offer;
         }
 
         location /set_stream {
-            proxy_pass http://fastapi_app:8080/set_stream;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass http://fastapi_backend/set_stream;
         }
 
         # WebRTC ICE/STUN support
         location /ws {
-            proxy_pass http://fastapi_app:8080;
+            proxy_pass http://fastapi_backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
