--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,6 +4,8 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
+    resolver 8.8.8.8 ipv6=off;
+
     upstream fastapi_backend {
         server fastapi_app:8080;
     }
@@ -37,11 +39,12 @@ http {
         }
 
         location /stun {
-            proxy_pass http://stun.myserver.com:3478;
+            proxy_pass http://stun.l.google.com:19302;
         }
         location /turn {
-            proxy_pass http://turn.myserver.com:3478;
+            proxy_pass http://turn.metered.ca:80;
         }
+
 
         client_max_body_size 100M;
         proxy_buffer_size 128k;
