--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,9 +1,4 @@
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-    sendfile on;
-    keepalive_timeout 65;
-
     resolver 8.8.8.8 ipv6=off;
 
     upstream fastapi_backend {
@@ -30,21 +25,13 @@ http {
             proxy_pass http://fastapi_backend/set_stream;
         }
 
-        # WebRTC ICE/STUN support
-        location /ws {
-            proxy_pass http://fastapi_backend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-        }
-
+        # WebRTC STUN/TURN Support
         location /stun {
             proxy_pass http://stun.l.google.com:19302;
         }
         location /turn {
             proxy_pass http://turn.metered.ca:80;
         }
-
 
         client_max_body_size 100M;
         proxy_buffer_size 128k;
