--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,5 @@
 http {
-    resolver 8.8.8.8 ipv6=off;
+    resolver 8.8.8.8 valid=300s ipv6=off;
 
     upstream fastapi_backend {
         server fastapi_app:8080;
