--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -29,9 +29,9 @@ http {
         location /stun {
             proxy_pass http://stun.l.google.com:19302;
         }
-;         location /turn {
-;             proxy_pass http://turn.metered.ca:80;
-;         }
+#         location /turn {
+#             proxy_pass http://turn.metered.ca:80;
+#         }
 
         client_max_body_size 100M;
         proxy_buffer_size 128k;
