--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "python-jose>=3.3.0",
     "python-multipart>=0.0.20",
+    "requests>=2.32.3",
     "sqlalchemy>=2.0.37",
     "uvicorn>=0.34.0",
 ]
