--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -15,23 +15,24 @@ http {
 
         location / {
             proxy_pass http://fastapi_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /offer {
-            proxy_pass http://fastapi_backend/offer;
+        # ✅ Bypass Nginx for WebRTC STUN/TURN (direct access)
+        location /stun {
+            proxy_pass http://stun.relay.metered.ca:80;
         }
 
-        location /set_stream {
-            proxy_pass http://fastapi_backend/set_stream;
+        location /turn {
+            proxy_pass http://global.relay.metered.ca:3478;
         }
 
-        client_max_body_size 100M;
-        proxy_buffer_size 128k;
-        proxy_buffers 4 256k;
-        proxy_busy_buffers_size 256k;
+        # Allow WebSocket for WebRTC signaling
+        location /ws/ {
+            proxy_pass http://fastapi_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+        }
     }
+
 }
