--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.11.12",
     "aiortc>=1.10.1",
+    "confluent-kafka>=2.8.0",
     "fastapi[standard]>=0.115.8",
     "opencv-python>=4.11.0.86",
     "passlib[bcrypt]>=1.7.4",
