--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "aiortc>=1.10.1",
     "confluent-kafka>=2.8.0",
     "fastapi[standard]>=0.115.8",
+    "joblib>=1.4.2",
+    "mediapipe>=0.10.21",
     "opencv-python>=4.11.0.86",
     "passlib[bcrypt]>=1.7.4",
     "psycopg2-binary>=2.9.10",
@@ -18,5 +20,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "requests>=2.32.3",
     "sqlalchemy>=2.0.37",
+    "torch>=2.6.0",
+    "torchvision>=0.21.0",
     "uvicorn>=0.34.0",
 ]
